# Got

./: .gitignore  README.md
Server/: CMakeLists.txt  Doxyfile.docs  Linked_List.hpp  Linked_list.h  Server  Server.cbp  Server.cpp  Tcplistener.cpp  Tcplistener.h  app.js  garbage.cpp  garbage.hpp  main  main.cpp  md5.h  socket_S.cpp  socket_S.h  vsptr.hpp  vsptrNT.hpp
Server/JSONFiles/: package.json
Server/html/: Linked__List_8hpp_source.html  annotated.html  classGarbageCollector-members.html  classGarbageCollector.html  classMD5-members.html  classMD5.html  classSocket__S-members.html  classSocket__S.html  classVSPtr-members.html  classVSPtr.html  classes.html  classlista-members.html  classlista.html  classpackage-members.html  classpackage.html  classspecific__package-members.html  classspecific__package.html  classvsptrNT-members.html  classvsptrNT.html  files.html  functions.html  functions_func.html  functions_rela.html  garbage_8hpp_source.html  hierarchy.html  md5_8h_source.html  menudata.js  socket__S_8h_source.html  structnode-members.html  structnode.html  vsptrNT_8hpp_source.html  vsptr_8hpp_source.html
Server/html/search/: all_0.js  all_1.js  all_10.js  (+40 more)
Server/latex/: annotated.tex  classGarbageCollector.tex  classMD5.tex  classSocket__S.tex  classVSPtr.eps  classVSPtr.tex  classlista.tex  classpackage.eps  classpackage.tex  classspecific__package.eps  classspecific__package.tex  classvsptrNT.eps  classvsptrNT.tex  hierarchy.tex  refman.tex  structnode.tex
Server/restapi/: app.js  huffman.js  jsdoc.json  md5.js  package-lock.json  package.json
(+38 files in other folders)
